--- a/pages/index.css
+++ b/pages/index.css
@@ -1,7 +1,18 @@
 @import url("../blocks/page/page.css");
 
 @import url("../blocks/header/header.css");
+@import url("../blocks/header/__link/header__link.css");
+@import url("../blocks/header/__links/header__links.css");
+@import url("../blocks/header/__right-link/header__right-link.css");
 
 @import url("../blocks/content/content.css");
+
+@import url("../blocks/places/places.css");
+
+@import url("../blocks/place/place.css");
+@import url("../blocks/place/__title/place__title.css");
+@import url("../blocks/place/__image/place__image.css");
+@import url("../blocks/place/__paragraph/place__paragraph.css");
+
 
 @import url("../blocks/footer/footer.css");
