--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -5,3 +5,20 @@
     object-fit: cover;
 }
 
+@media screen and (max-width: 1279px) {
+    .place__image {
+        max-width: 512px;
+    }
+}
+
+@media screen and (max-width: 1023px) {
+    .place__image {
+        max-width: 384px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .place__image {
+        max-width: 320px;
+    }
+}
