--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -4,3 +4,23 @@
     padding: 0;
 }
 
+/*@media screen and (max-width:1279px){
+    .places{
+        max-width: 1024px;
+    }
+}
+
+@media screen and (max-width:1023px){
+    .places{
+        max-width: 768px;
+        margin-top: 88px;
+    }
+}
+
+@media screen and (max-width:767px){
+    .places{
+        max-width: 320px;
+        margin-top: 64px;
+    }
+}
+ */
