--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -4,7 +4,7 @@
     padding: 0;
 }
 
-/*@media screen and (max-width:1279px){
+@media screen and (max-width:1279px){
     .places{
         max-width: 1024px;
     }
@@ -23,4 +23,3 @@
         margin-top: 64px;
     }
 }
- */
