--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -8,17 +8,20 @@
 @media screen and (max-width: 1279px) {
     .place__image {
         max-width: 512px;
+        height: 512px;
     }
 }
 
 @media screen and (max-width: 1023px) {
     .place__image {
         max-width: 384px;
+        height: 384px;
     }
 }
 
 @media screen and (max-width: 767px) {
     .place__image {
         max-width: 320px;
+        height: 320px;
     }
 }
