--- a/blocks/card/__subtitle/card__subtitle.css
+++ b/blocks/card/__subtitle/card__subtitle.css
@@ -1,9 +1,10 @@
 .card__subtitle {
+  max-width: 205px;
   font-family: Inter, Arial, sans-serif;
   font-style: normal;
   font-weight: 100;
   font-size: 12px;
-  line-height: 25px;
+  line-height: 22px;
   color: black;
   margin: 0;
 }
