--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,9 +1,10 @@
 .footer {
   background-color: #fecda7;
   max-width: 1280px;
-  min-height: 620px;
+  height: calc(100vw / 2);
   display: flex;
   align-items: center;
   justify-content: center;
   margin: 0 auto;
 }
+
