--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -5,10 +5,14 @@
     font-size: 14px;
     line-height: 14px;
     color: black;
-    padding-right: 18px;
     transition: opacity .2s linear;
     text-decoration: none;
+    padding-right: 16px;
 
+}
+
+.header__link:not(:last-child){
+    padding-right: 32px;
 }
 
 .header__link:hover {
