--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,9 +1,26 @@
 .lead__title {
-    max-width: 515px;
-    font-family: Inter, Arial, sans-serif;
-    font-weight: 700;
-    font-size: 34px;
-    line-height: 40px;
-    color: black;
-    margin: 0;
+  max-width: 515px;
+  font-family: Inter, Arial, sans-serif;
+  font-weight: 700;
+  font-size: 34px;
+  line-height: 40px;
+  color: black;
+  margin: 0;
 }
+
+@media screen and (max-width: 800px) {
+  .lead__title {
+    font-size: 24px;
+    line-height: 24px;
+    max-width: 500px;
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 500px) {
+    .lead__title {
+      font-size: 18px;
+      line-height: 18px;
+      max-width: 300px;
+    }
+  }
