--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,7 +1,7 @@
 .place__image{
     max-width: 640px;
     width: 100%;
-    height: 640px;
+    height: 534px;
     object-fit: cover;
 }
 
@@ -23,5 +23,7 @@
     .place__image {
         max-width: 320px;
         height: 320px;
+        grid-column: 1;
+        grid-row: 2;
     }
 }
