--- a/blocks/place/__text/place__text.css
+++ b/blocks/place/__text/place__text.css
@@ -1,6 +1,10 @@
 .place__text{
     max-width: 640px;
     background-color: #f2f2f2;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 70px 190px 80px 70px;
 }
 
 @media screen and (max-width: 1279px) {
@@ -12,11 +16,13 @@
 @media screen and (max-width: 1023px) {
     .place__text {
         max-width: 384px;
+        padding: 30px 40px;
     }
 }
 
 @media screen and (max-width: 767px) {
     .place__text {
         max-width: 320px;
+        padding: 0;
     }
 }
