--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -18,6 +18,7 @@
     }
 }
 
+/*
 @media screen and (max-width: 767px){
     .place{
         display: flex;
@@ -25,3 +26,4 @@
         flex-direction: column;
     }
 }
+*/
