--- a/pages/index.css
+++ b/pages/index.css
@@ -10,6 +10,7 @@
 @import url("../blocks/lead/__subtitle/lead__subtitle.css");
 @import url("../blocks/lead/__title/lead__title.css");
 @import url("../blocks/lead/__text/lead__text.css");
+@import url("../blocks/lead/__title/_size/lead__title_size.css");
 
 @import url("../blocks/content/content.css");
 
