--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,10 +1,15 @@
 .footer {
   background-color: #fecda7;
   max-width: 1280px;
-  height: calc(100vw / 2);
+  min-height: 620px;
   display: flex;
   align-items: center;
   justify-content: center;
   margin: 0 auto;
 }
 
+@media screen and (max-width: 1279px) {
+  .footer {
+    min-height: calc(100vw / 2.064516);
+  }
+}
