--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -15,7 +15,7 @@
 
 @media screen and (max-width: 500px) {
   .lead__image {
-    max-width: 300px;
-    max-height: 300px;
+    max-width: 100%;
+    max-height: 100vw;
   }
 }
