--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,14 +1,17 @@
 .place__paragraph{
-    max-width: 484px;
     font-family: Inter, Arial, sans-serif;
     font-style: normal;
     font-size: 14px;
     line-height: 22px;
     font-weight: normal;
     margin: 0;
-    padding-bottom: 25px;
+    padding-bottom: 15px;
+    max-width: 340px;
 }
 
+.place__paragraph:last-child{
+    padding-bottom: 0;
+}
 @media screen and (max-width: 1023px) {
     .place__paragraph {
         padding-bottom: 10px;
