--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -12,10 +12,17 @@
 .place__paragraph:last-child{
     padding-bottom: 0;
 }
+
+@media screen and (max-width: 1279px) {
+    .place__paragraph {
+        max-width: 352px;
+    }
+}
+
+
 @media screen and (max-width: 1023px) {
     .place__paragraph {
         padding-bottom: 10px;
-        max-width: 352px;
     }
 }
 
