--- a/blocks/card/__subtitle/card__subtitle.css
+++ b/blocks/card/__subtitle/card__subtitle.css
@@ -1,12 +1,12 @@
 .card__subtitle {
-  max-width: 205px;
-  font-family: Inter, Arial, sans-serif;
-  font-style: normal;
-  font-weight: 100;
-  font-size: 12px;
-  line-height: 22px;
-  color: black;
-  margin: 0;
+    font-family: Inter, Arial, sans-serif;
+    font-style: normal;
+    font-weight: 100;
+    font-size: 12px;
+    line-height: 21px;
+    color: black;
+    margin: 0;
+    letter-spacing: 1px;
 }
 
 @media screen and (max-width: 767px) {
