--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -5,13 +5,13 @@
     font-size: 14px;
     line-height: 14px;
     color: black;
-    transition: opacity .2s linear;
+    transition: opacity 0.2s linear;
     text-decoration: none;
     padding-right: 16px;
-
+    letter-spacing: -0.5px;
 }
 
-.header__link:not(:last-child){
+.header__link:not(:last-child) {
     padding-right: 32px;
 }
 
