--- a/pages/index.css
+++ b/pages/index.css
@@ -11,6 +11,7 @@
 @import url("../blocks/lead/__title/lead__title.css");
 @import url("../blocks/lead/__text/lead__text.css");
 @import url("../blocks/lead/__title/_size/lead__title_size.css");
+@import url("../blocks/lead/__subtitle/_size/lead__subtitle_size.css");
 
 @import url("../blocks/content/content.css");
 
