--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -9,6 +9,7 @@
     text-decoration: none;
     padding-right: 16px;
     letter-spacing: -0.5px;
+    opacity: 1;
 }
 
 .header__link:not(:last-child) {
