--- a/blocks/header/__right-link/header__right-link.css
+++ b/blocks/header/__right-link/header__right-link.css
@@ -8,6 +8,12 @@
     margin: 0;
     text-decoration: none;
     color: black;
+    transition: opacity .2s linear;
+    opacity: 1;
+}
+
+.header__right-link:hover{
+    opacity: 0.8;
 }
 
 @media screen and (max-width: 1023px) {
